@@ -1,6 +1,10 @@
 JSLintMate
 ==========
 
+* IMPROVEMENT: Hid ugly internal URLs when hovering over problem items in
+  TextMate 2.
+
+
 1.3 (2012-03-05)
 ----------------
 * FEATURE: Added support for TextMate 2.
